--- a/the-app/public/index.html
+++ b/the-app/public/index.html
@@ -31,6 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
